--- a/src/app/app.html
+++ b/src/app/app.html
@@ -43,6 +43,14 @@
       Not a member?
       <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Start a 14 day free trial</a>
     </p>
+    <p class="mt-10 text-center text-sm/6 text-gray-500">
+      Not a member?
+      <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Start a 14 day free trial</a>
+    </p>
+    <p class="mt-10 text-center text-sm/6 text-gray-500">
+      Not a member?
+      <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Start a 14 day free trial</a>
+    </p>
   </div>
 </div>
 
